--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,7 @@ code {
   background-color: var(--ep-color-primary-light-9);
   color: var(--ep-color-primary);
 }
+
+.margin-top {
+  margin-top: 20px;
+}
